--- a/Myntra/2-actual-backend/package.json
+++ b/Myntra/2-actual-backend/package.json
@@ -12,5 +12,11 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2"
+  },
+  {
+  "name": "my-package",
+  "scripts": {
+    "build": "babel src -d lib",
+    "test": "jest"
   }
 }
